Implement subtle particle effects for projectiles and player actions to enhance visual feedback. Introduce a new Particle class for managing particle behavior and update the game loop to handle particle updates and rendering. Revise UI elements to integrate health and experience bars, improving overall user experience and responsiveness. Adjust CSS for better layout and styling of HUD components.

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
                 </div>
                 <div id="controls-top">
                     <button id="pause-btn" class="icon-btn">⏸</button>
+                    <button id="hud-settings-btn" class="icon-btn" title="设置">⚙</button>
                     <button id="sound-btn" class="icon-btn" title="音效">🔊</button>
                 </div>
             </div>
@@ -352,7 +353,11 @@
 
             <!-- Bottom Area: Equipment & EXP -->
             <div id="bottom-bar">
-                <div id="equipment-container"></div>
+                <div id="hp-bar-container" aria-label="生命条">
+                    <div id="hp-badge">❤</div>
+                    <div id="hp-bar"></div>
+                    <div id="hp-text">HP</div>
+                </div>
                 <div id="exp-bar-container">
                     <div id="exp-bar"></div>
                     <div id="exp-text">EXP</div>
